tests/baselines/reference/genericArrayAssignment1.errors.txt
tests/cases/compiler/genericArrayAssignment1.ts(4,1): error TS2322: Type '数字[]' is not assignable to type '文字[]'.
  Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericArrayAssignment1.ts (1 errors) ====
    var s: string[];
    var n: number[];
    
    s = n;
    ~
!!! error TS2322: Type '数字[]' is not assignable to type '文字[]'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.